booking form, make sure form is not cut off by fixed buttons

--- a/src/assets/styles/core.css
+++ b/src/assets/styles/core.css
@@ -2258,7 +2258,7 @@ body.loading .modalLoader {
 
 .panel-body,
 .booking .form {
-	padding: 15px 15px 15px 25px;
+	padding: 15px 15px 85px 25px;
 }
 
 .panel-body .panel-body {
